--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-<h1>BitmapEditor</h1>
-<p><b>Bitmap Editor</b> is a simple JavaScript application designed to teach computer science. Especially trying in a playful way to demonstrate the fact that the computer understands only zeros and ones.</p>
+#BitmapEditor
+**Bitmap Editor** is a simple JavaScript application designed to teach computer science. Especially trying in a playful way to demonstrate the fact that the computer understands only zeros and ones.
